--- a/teaching/310-F16/lab1-free-fall/lab1-free-fall.ipynb
+++ b/teaching/310-F16/lab1-free-fall/lab1-free-fall.ipynb
@@ -17,12 +17,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Example: Reading in a File"
+    "## Example: Reading One File"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -30,28 +30,21 @@
     {
      "data": {
       "text/plain": [
-       "(array([ 0.43333333,  0.46666667,  0.5       ,  0.53333333,  0.56666667,\n",
-       "         0.6       ,  0.63333333,  0.66666667,  0.7       ,  0.73333333,\n",
-       "         0.76666667,  0.8       ,  0.83333333,  0.86666667,  0.9       ,\n",
-       "         0.93333333,  0.96666667,  1.        ,  1.03333333,  1.06666667]),\n",
-       " array([ 0.02285677,  0.02285677,  0.02285677,  0.03428515,  0.04571354,\n",
-       "         0.04571354,  0.02285677,  0.03428515,  0.04571354,  0.04571354,\n",
-       "         0.04571354,  0.03428515,  0.04571354,  0.05714192,  0.05714192,\n",
-       "         0.05714192,  0.06857031,  0.06857031,  0.06857031,  0.06857031]),\n",
-       " array([-0.03428515, -0.05714192, -0.06857031, -0.04571354, -0.2285677 ,\n",
-       "        -0.31999478, -0.44570701, -0.50284893, -0.6057044 , -0.74284501,\n",
-       "        -0.86855725, -1.01712625, -1.17712364, -1.33712103, -1.5085468 ,\n",
-       "        -1.70282934, -1.8856835 , -2.13710797, -2.36567566, -2.55995821]))"
+       "array([ 0.        ,  0.03333333,  0.06666667,  0.1       ,  0.13333333,\n",
+       "        0.16666667,  0.2       ,  0.23333333,  0.26666667,  0.3       ,\n",
+       "        0.33333333,  0.36666667,  0.4       ,  0.43333333,  0.46666667,\n",
+       "        0.5       ,  0.53333333,  0.56666667,  0.6       ,  0.63333333])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "time, xx, yy, vx, vy = np.loadtxt('video1.txt', unpack=True, skiprows=7)\n",
-    "time, xx, yy"
+    "time -= time[0]\n",
+    "time"
    ]
   },
   {
@@ -82,7 +75,82 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Example: Plotting theoretical Curves"
+    "## Reading Multiple Files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(28, 28, 28)\n",
+      "(28, 28, 28)\n",
+      "Yay!\n"
+     ]
+    }
+   ],
+   "source": [
+    "t1, y1 = np.loadtxt('BigBlackStyro1.txt', unpack=True, skiprows=7, usecols=[0, 2])\n",
+    "t2, y2 = np.loadtxt('BigBlackStyro2.txt', unpack=True, skiprows=7, usecols=[0, 2])\n",
+    "t3, y3 = np.loadtxt('BigBlackStyro3.txt', unpack=True, skiprows=7, usecols=[0, 2])\n",
+    "\n",
+    "# Remove time zeropoint.\n",
+    "t1 -= 1.4\n",
+    "#t2 -= t2[0]\n",
+    "#t3 = t3 - t3[0]\n",
+    "\n",
+    "# Throw out last few datapoints so arrays are lined up.\n",
+    "t1 = t1[:-3]\n",
+    "t2 = t2[:-2]\n",
+    "y1 = y1[:-3]\n",
+    "y2 = y2[:-2]\n",
+    "print(len(t1), len(t2), len(t3))\n",
+    "print(len(y1), len(y2), len(y3))\n",
+    "#print(t1 - t2)\n",
+    "#print(t1 - t3)\n",
+    "print('Yay!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<matplotlib.lines.Line2D at 0x1120bec10>]"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYEAAAEACAYAAABVtcpZAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAIABJREFUeJzt3XmcXFWd9/HPtzt7h3RCDCEkIQGSgCObqOxoI4LAg4Ko\nCO2D4owy44zbPOqAAzOdFlxglgfBkTEM6OPSQgBZFYagBkVBcQwQQiA7ZCOQnWydTvfv+aMqUl1d\n1VXpquqq6vq+X6+86HvvqXPPpZP7q3vP+Z2jiMDMzGpTXbkbYGZm5eMgYGZWwxwEzMxqmIOAmVkN\ncxAwM6thDgJmZjWsKEFA0tmSXpC0SNIVWcrcKGmxpKclHVuM85qZWWEKDgKS6oBvA+8F3gJcIumI\ntDLnAIdFxHTgr4H/LPS8ZmZWuGI8CRwPLI6IlyKiA7gdOD+tzPnADwAi4vdAo6TxRTi3mZkVoBhB\nYCKwMmV7VXJfb2VWZyhjZmb9zB3DZmY1bFAR6lgNHJyyPSm5L73M5BxlAJDkyYzMzPZRRKgvnytG\nEHgKmCZpCrAWuBi4JK3M/cDfAXdIOhHYHBHrslXY14sph4tO1NzZn+Nd6fv/7vss/Y/L+HtgyUdu\n4rt3fJbTZt4NMz+Y8tkbeWz2k9HUWz2pZU6arlmTxzIjvczKDSx6YnFcXrSL6iNJMyNiZrnbUSq+\nvuo2kK+vkC/PBQeBiOiU9BngERKvl26NiIWS/jpxOGZFxM8lnStpCbAd+ESh5610Q+oZBnwamHbE\nBKZlKjNuFJNo02XAppFDacxV5+SxzMgSKLqp9GBhZpWjGE8CRMTDwOFp+76btv2ZYpyrWqzexBKa\n41yAhTdqLvS8eQ+uZyhwOjDmgEYOzVTPtPG8nTY9BmyavH/3/8d7jRjCfrTpMGAjsCXfYGFmVpQg\nYPlpenP37TWbWEpzfBxgWZZAsXoTC4EWYMyO3RwBHJheZsIYZgCPAmOAkUccRMZHQ8GfX7OV6Glh\nbh8/Vy3mlrsBJTa33A0osbnlbkAlchAo0MoNLMr0DXvlBhal72v6i+z1rF/MjJnXZKjnVSbSHHMB\nNtyoz0PPp4Gl6/gfmhP9BrRp0JJXeAw4Ob3cEQdxKm36I/DUsVN4581/2bOuQp4WIhLtHKh8fdVt\noF9fXzkIFCifb835BIpB22icubFnmbOG5O4r6KY59uy5UR2ZDr24lt8CVwLvGDGUCzOVGTqI4bRJ\nNEe4b8Fs4HMQ6Af53DC76sh4407d/9x8jjnzU3Sml1kNx+TTjq6gi+b4HfC7lTfqA8AB6WWmjOMY\nYCNt+uPxhzHjWx/rNvwXcN+C2UDiIFDhxnUy9AfH6OR/Pp3/mdaF5uyiPr3Me4bRbUjtI2sZP+Yb\nbEkvF1vJOVXHorU8CXwEeEcE385UZlAdg1O3/cRgVr0cBCrc/sGw01fwm3nfpW5mxmcFiHoGq1XH\nA0uBjdM30XiQer5GWrOJHXt//t0GZjT9sGddSzYwg+ZYBzz4yo36EjAlvcy0AzmBNj0F/DfwyOSx\nHD77c7wzvZyfGMwqn4NAhXtxEFsmb4nROwZr/No6ltJJQ3qZgzsYdsl82h6bwrg1o4iJYuSvXupZ\n13uGMWLvzxsHw2Mn9iwzPOVz2QLF0iW8+tUP8SXgLODfjzgITw1uVqUcBCrEy4PZ0TQ+w7f3jYlv\n7yM6Yt3G4dqTqeegvpOOtrtZEjCmS7R/QYzMdI49Q2lUq14Elh72GqMmfa9nmTUpndPbhzEiU6AY\nvYoRNMdjwGPAVUu+rd+SYTSSmVU+B4EKsbiRBxc39HyvTmfPoabpVgxmF3vibEmqD6auH8RzdL3x\nrX+vQ7az63N38M1/Pp0d43dy+i/W96yrqZEJatVrwEY19qwDoL3zjddKAL9+jUMyPTFs3MnJtOmv\ngJ+c1MIN7jcwqzwOAhUiVua+Ea4K1r5nWOb9iUoigOWvDVdHpieGwYEuXMhfXbiQY6+AIZnOMaid\nLSQWBxoT2/kJ8Nb0Mjv3Z7hadSUwB5g3OssTw5vuYTeJtSSuP2EaO264lEnpZdxvYFZeDgJV5IVd\n8ebcpaB+Dzug56ull8RGIk5FGvTCEDaym/3SyzR0URct8Srw6ox/04EHZXhltHorXUvOZALwI+BN\nW0cyNFM7tu9mK83xfto0NYLH8mm7mfUvB4EBaOseHryInq9etu5JvlqK2LNrsLZBzyDwlt00ID0H\n3H74EEY+kLmDuX5xS3weQK2a3LWHOWTIZN6p5PmaY8XaG7UceuYcmFl5OQgMQE9E7ldLjYmAMCF9\n/xL4DXA18JGjd/cciQR/ftIAIFpipWbrFTIEAfZjqlo1OVpiZbaRRq9t5x20aSLNkXF9CTMrLQeB\nGrUSFl2UZT8RjwOPL5aOIsOkdo17cndWAyAGAU+rVb9tGMWoTP0GB95LPfAsbfrOu65h4vgMs6m6\n89isdBwEalQ+TwvZzIATka4GbiVi7eFLGT/pmz0zlFcFr794NocDF+8YztmZ6trSzkbgRODadx7B\nR675cM8Oa3cem5WOg4Dts1XwHInlQp9HevQUaL81Q0f0RfD0Cy2xHbhVs3UpGZ4qdtaznOZ4GfjY\nj76qc37zQ96UXmbJhgxDZ82sKBwELKscr4z+GunLwP8eD+f0+ST7c4Ja9TBwR+MQhqzIlpxmZiXh\nIGBZ5XxlFLEV+M4S6SIyfMvPywZ+B9wGXLxlDKMyFRkxmBG0aSrNsaJP5zCzrBwErGQOg7chfQr4\nyeFDs/YbjHuhJWYDs0ffrc1bMrxW6go6gT/Spu8DXzupheucfWxWHAUFAUljgDtIzDS5ArgoInr8\nQ5e0AtgCdAEdEXF8Iee16vAaLAP+F3DdOe3s/L9Z+g32/rw7S5LbugbqD1vBNX+azFGN9by4cQhD\nh2Z4aljpvgOzfVbok8CVwKMRcb2kK4CvJPel6wKaImJTgeezCpSj7+BypMmdifyDXiWTy3rkLsRO\nXlzWwVmjl3HC5EH8rH0EzYvcd2BWFIUGgfN5413w/yOxkHOmICCgrsBzWYXKo+9g5SuJp8EeaxNA\nyoI4W1nE7AwltrIoWuJyteqQlXu4nBE9F9Yxs74pNAgcEBHrACLiFUk9litMCmCOpE5gVkTcUuB5\nbYCYAScg/R1w24kkxp2mW5n8b7TEcuAro+/WpzP1HSQ7kE8FfntSC991v4FZbjmDgKQ50G1ZQpG4\nqV+doXhkqeaUiFgraRyJYLAwElmpVuNWw/MkFqe5+m2w49v0zBhOf9WkLH/L9kAncCvQ/tapDPvO\nJ5jeoy4nnpl1kzMIRMSZ2Y5JWidpfESsk3Qg8GqWOtYm//uapHuA44GsQUDSzJTNuRExN1c7rbLl\n0W9w9LDE1NQ5Jdcz6PEk8OpIhtQv5sr2aWxtGMrthbbZrFJJagKailFXoa+D7gcuA64DPg7cl15A\n0gigLiK2SWog8a2vtbdKI2Jmge2yCpNHv8GzL0sLgWyvFP9s5+s8yOyMI4Fe74KvD17C0vHL6Hoq\n2xrKZlUu+cV47t5tSS19ravQIHAdMFvSXwIvkXxylzQBuCUiziPxKukeSZE8348j4pECz2s1ZBAM\nTt3ubQEetWoI8MV14zh3XYYRRGPX9Jw+26yWFRQEImIj8J4M+9cC5yV/Xg5eiNz67jB4O9L7iHgg\nV9loid3ANxrv0Ve2ZlgvoWEwDbTpu8CVNHvIspkzhq1iZOs36IKtwLeQLgS+QIaExHQdu8m4aM5r\n7awn0YH8/MdP08KdHT2HLnsEkdUSBwGrGL32G0j7Af8CPHuRNB8YmV5kJSzaW0e2xLOd+zNGi5l8\n8UiuX/A61+8/oee/AWceWy1xELDqEPE68DdIZ8+A+64lw7oD+dSzgSeAe27fxqc1irpw5rHVOAcB\nqy4RDy+VngJO6bVc79nHtwG3jbpXr7+e4YnCrJY4CFjV6YQ9ucr0NoJor/o9dGbaP3QQQ2iTaI5s\nyY9mA4bn87EB42D4C6QeWcL7atsIhm3p5FHaNLEY7TKrZH4SsAFjF2wDnkC6/QwYNRYOTi+T2nmc\nLfN4Zye7pq3gmJ8exPxbTtO8XR09J6zzCCIbKBwErOr0OgUF/CNw9clwyTUZ/n6nfi5b5nHXVhat\n7+LhM1Yxa3QnTUeMoS79kdkjiGygcBCwqpNzCgr4wgrpROCE3grl6jdQqx7fBKt/c2LP16YeQWQD\nhfsEbEBqh12F1hEt8erI19lejPaYVSoHAaspjTC2GPXUKWUxHLMq5iBgNWU8TEO6FanHGsX7on44\n+9GmrNOsm1UL9wnYgJSt83gdLCORZ/DsRdJz5Jh+ItsIoteGwVfWc3frj3XDENFKc2TMOTCrdA4C\nNiDl7DyWzpkB9+aafiLr2gW7WHnDZg55dAefvXMCTZ88Ui/tP7Ln6pgeSmqVzkHAalPEQ/lMP5Fj\n7YL6ee20HP0yf3/ACE7ZMybjjKQeSmoVzUHAalY+00/0JlqiE/hnteqxbcOZs9ST0VkVcsewWZr6\nffxyFC3xi1Gbeb1U7TErJQcBszTJlcwyfK/PTl14sjmrSn4dZDUr2wiiQdAO3Id0PfDvRN9nEx08\nmKGekdQqmQr4+42kDwEzgTcD74iIP2UpdzZwA4knj1sj4rpe6oyIcCKOlZc0FbjjChj/MqxK7z9I\nHUYKMOIvtGbnR3quZFb3S7j5Yn53eSPn0px7WUyzvijkvlnok8B84APAd7MVkFQHfBs4A1gDPCXp\nvoh4ocBzm5VOxAqk09ph6U8yjCBKf4LINpRUYtvVGzjtFztY+asZ2tgxlNE9TrWVtZtfijcXsfVm\neSsoCETEiwCSeotAxwOLI+KlZNnbgfMBBwGrbBG710hLgUk5i/Y+lHTk4g7u2TCB93S9u+fx0XcV\n1EqzgvRHn8BEYGXK9ioSgcGsJkRLbAPOHHWndrwOw8vdHrNUOYOApDnA+NRdQABXRcQDpWiUpJkp\nm3MjYm4pzmPWVw2wz3MP1e9mNw4CVgSSmoCmYtSVMwhERKGTZK2m+wpPk5L7ejvnzALPaVZSk+BI\npC9S4Oghs75IfjGeu3dbUktf6yrm66Bs/QJPAdMkTQHWAhcDlxTxvGYlk20Y6dbEIIcPA+9CuoyI\njX09x65R7Pd3N+hN//GFWN/nhpr1UaFDRC8AbgLeBGwGno6IcyRNAG6JiPOS5c4GvsUbQ0S/2Uud\nHiJq1UEaAnwD+OCF8PQgeo78SR1KOnqKFmpU2jBSodiP4WPPpeusBi68+Qvx835puw0ohdw3CwoC\npeAgYFVHOv+f4M5rYHD6oYvgsdkRTb1+vk369Kt8/87XubTzHjbT0TOT38NIrTflzBMws4j7lkt/\nIseaxlk1R9wMHz/wJj1w7Uju3HNGzyIeRmql4rmDzIpgdxHWNG75bNw1cgtbi9Ees3w5CJhVEk9E\nZ/3MQcCshPbL0FncF+4ls1Jxn4BZEWQaSrofjD4EZiBdQsRPCqn/9dGMUquOjJZ4rpB6zNJ5dJBZ\nKUlHAT8jMZT6X3MllmUaRlpXR93IEYxYfw7tO4PPBdwWLRX2D9fKykNEzSqZNAl46PPAWtiQfjh9\nWuqM2nTgn3bxy/evZfyaPTwU32M3DRzao9xWFvU2mZ0NTB4ialbJIlYhnTYMls+GI9MPZ8pI7qE5\nXjmuTSc+P4V7P/oKpz54MAdwRoZ5iGYXob1WU9wxbNYfIjavgGcLqqM5to6q4+wHDuK3Y3YzJFOR\n4dFzTQOz3jgImPWToAjDP5tjN3DpsPbuK53tNbSeEQWfw2qKg4BZtWmOrp17Ck9OMwMHAbOyOwAm\n0/vqfPnzkArbR+4YNusnmXIJBsPQQ2Ea8COkTxKxM5+6Gnax45gnady73QnMb4ddDQxRqwZHS3QU\nsek2gHmIqFm5ScOB/wIOBy4gYlWuj1x0oubO/hzvSt23qwumPMWmV/fn18DF0RJ+ZVQjnCdgVu0S\nr4P+4Rr4p2WwaDvdJ5JLzyU4abpmTR7bfSTQAaM4uHEUY244ml/vCIYDF0RL7OifC7BychAwGyA+\nJc2/JXMuQe51CQDa9NWO4PzRS1mw41FOZxNL6KKzWxknlA04ThYzGyC2ZMgo3kctg8WwrYdx+uCH\nIT7EqT1KOKHMUnh0kNlA0hwBXFEvnpjYzthMRZxQZqkcBMyqQP2+PLUnAsEXOiNzcpoTyixVQUFA\n0ockPSepU9JxvZRbIekZSfMk/aGQc5rVokPhrUhT8/5Ac3Tt7CCv4aZW2wrtE5gPfAD4bo5yXUBT\nRGwq8HxmA1qmXAKAxsQi9o8jvY+IeYWcY+cIhqlVddESXYXUYwNDQUEgIl4EUO5sR+FXT2Y59Tql\ntPRB4BGkjxLxSK660hPKAHYH/HEIAn6qVl0aLfF6wY22qtZfo4MCmCOpE5gVEbf003nNBo6Iu5Fe\nBe66THp+R4ZJIlLzCU4ey6LZl3ZfoAbg47NY+AN4FXhCrXp/tMSy0jfeKlXOICBpDjA+dReJm/pV\nEfFAnuc5JSLWShpHIhgsjIjHeznnzJTNuRExN8/zmA1sEb9BapoE866FoemHU18lrdzAootu7H58\n1HDGTB/HjD3TuH7QEp7hMZ7TcVpEO5u7FXQuQUWT1AQ0FaOunEEgIs4s9CQRsTb539ck3QMcD2QN\nAhExs9Bzmg1YEQuXS38CTuqt2BOLs9zE23Qk8EBM5/u6j0WczzE9yjiXoKIlvxjP3bstqaWvdRXz\nPX3GfgFJIySNTP7cAJwFeLFsswJ0wO4+f7g5niMRQM49clTP10VWWwodInqBpJXAicCDkh5K7p8g\n6cFksfHA45LmAU8CD0QenVpmVkLN8Qpwep0yf3kbXcexJ03XrH5ulZVBoaOD7gXuzbB/LXBe8ufl\nwLGFnMfM8lO3L1/smmPHs1/T89B9NlKAoyfROH6TM4trgecOMqtCmfIJJsPh02AGUiMRWwqpf2kH\nHFBIBVY1PIuo2UAh1QE3AScA7yUi52R0mqxZo0dz0TGT3sgn6Ah4IaBxEiuXH8yUaKmwm4T14Kmk\nzSwhkbj5TeBc4EwiXsn1kUwL1KzvhKnz2b69gX+LlujzyBPrH55K2swSIgLpSmDbTHhhibRwN7Sn\nFklfoCaTN9XD+5/h5Z+czIfVqo5oiWtL2WwrHwcBs4Em8Xh/zWvSx3+UGLnXTXpfQqakshFD2O/N\n43nz3Il8vmk1X9LbdR476blcpZPKqp6DgNkA9RqsAg7LVa6XpLJjgIfnTuTrTSO4nvcxrEcZJ5VV\nPU/qZmaZNcczwBnvGsGVB+5hTbmbY6XhIGBm2TXH80DTkA6mZDrsVcqqn4OAWY3ZD0bv0weaY/G2\ndnZkOuRVyqqf+wTMBqhMCWX7wehD4HCkc4n4eb51dQVegGaAcp6AWa2RTgLuAz5NxN35fGTSdK2Z\nNu2NyeY6Ap7ZDexg+/ZzGOVVysrLeQJmlr+IJ5DeCzyENIKIH+b6SKYFajZ3wtSn6QRuUasuj5bo\nLFWTrXQcBMxqUcQ8pHdfA39YI129AdamHs4noWx0PXz0BbZ/53imAj9Sqz4WLdFRymZb8TkImNWq\niOcXSQt+mFjkqdson3wSyupF/aHjmbb5UFaPWcb+MYfFulMvk95/4ISyiuYgYFbD2mFnPuV6SShr\nAO7fdhivNTxCAx/mtB5lnFBW0TxE1Mz6rjm2A+eNqGPU0UPK3RjrCwcBMytMc+wEPrB+CyMzHXZC\nWWVzEDCzHsbBxH36QHO07+joPlvpXk4oq2zuEzCrYZkSyobA0BlwJNKnibi50HM466eyFZQsJul6\n4H0k5itfCnwiIrZmKHc2cAOJJ49bI+K6Xup0sphZuUmHAnOBrxLxX/l8JD2hLICFu2FLO+27z2R0\ntETPqaitKMq2spik9wC/jIguSd8EIiK+klamDlgEnAGsAZ4CLo6IF7LU6SBgVgmk6cCvgKuI+H+5\nimdaoWxPwKQneG3dOP4AXBgtsbtEra1pZcsYjohHUzafBD6YodjxwOKIeAlA0u3A+UDGIGBmFSJi\nMckveh+TPrYL6tOL5EoqGyQ47wXW3zqO3cAdatVFTiirLMXsE/hL4PYM+ycCK1O2V5EIDGZW6SJe\nQDpzCvzpGugxCDS1PyFTQtnwwTRMP5C3rDmEvzloOV8G2tSqS6Il9pS24ZavnEFA0hxgfOouEq/7\nroqIB5JlrgI6IqKtGI2SNDNlc25EzC1GvWbWBxELXpaeBd7eW7FeEsrOAe549mBOP/o2HqGT1Zqt\nhd3KOKt4n0hqApqKUVfOIBARZ+ZozGXAucC7sxRZDRycsj0pua+3c87M1S4z6z87YXufP9wcD9Gm\na48ayj2DtrBqzwc5CTigWxlnFe+T5BfjuXu3JbX0ta6C8gSSo36+DLw/IjKOESbRETxN0hRJQ4CL\ngfsLOa+ZVZnm+A/gv48ax5vL3RTrrtBksZuAkcAcSX+S9B0ASRMkPQgQEZ3AZ4BHgAXA7RGxMFuF\nZjZgfTG8OE3F8aIyZpbTSdKsySkzjY6Exonwlhfg4Tsj3p9vPYOP0m/2fIhT0/ePvostR+xidtZ+\nBeuVF5Uxs5LKOAxUejdwO9KpRDyeTz17usi48Mz4CTRO3uo5hsrBQcDM+ibil0j/G/gp0vuJeDLn\nZ7ayaPRdHHvMJBr37toesCCgcQL7l7K5lplfB5lZYaRzge8D5xLxx1zFM2UW/34XnLaMjo7BnB4t\n8dsStXTA8usgMyufiJ8jffIa+PVS6fkdsC31cD5LVZ4wDN72HAuffCs/VaveEy0xv7SNtr0cBMys\ncBH3r5SWfR/eln4ofZbSbGZsYPeT8HngIbXqtGiJ5UVto2XkIGBmRbEZ1udTLtP0EmMaOGDagfxF\nTGee/pUVjGSB7tY8OnljniFnFZeEg4CZ9ateppe4DHh0RBerd5zBcODkbsedVVwSXlnMzCpDc3wf\n+Nox4zm23E2pJQ4CZlZSdRmmoM6qOf5z7TZWZTo0uo5jT5quWUVrmAF+HWRmRZJpqcpJcPghMBVp\nCJHfgjIrNrMKOCx9/9GTaBy/yQllxeYgYGZFkSWreBBwJ/ADpI+SmEusT5Z3dJ/T3orDQcDMSidi\nD9IlwMPAt5A+S64M1QxZxR0BC+rguelMKnGLa44zhs2s9KRGEvPf30tEa67imbKKX+6AGS/S3j6U\ny6MlflCillYlZwybWWWL2IJ0dissWid9dD2sST2cT1bxwYPhnf/D/Dknc71atTFa4sHSNro2OAiY\nWf+IWLdEWvhDOAGYnnoovUM5U0LZ5P054u3DmLCgng+v6eSnatUHoiW/2UstOwcBM+s37bArn3IZ\nE8raNAj40dfhisalfHzrr3hEx2oBHWlLXzqzeJ84CJhZdWiOPbTpUmD2lsP4K93HCj7A23uUc2bx\nPnGymJlVj+boILFO+fCj9mNsuZszEDgImFnZDYaheRdujnbggxu3MjrT4eHhhLJ9UdDrIEnXA+8D\n2oGlwCciYmuGciuALUAX0BERxxdyXjOrTpmyisfBpOlwBNJYIjbkVVFz7NzxDe0EhqQfGlrPiCI0\ntWYU2ifwCHBlRHRJ+ibwleSfdF1AU0RsKvB8ZlbFsg4DTdw/fo50BhHbMpZJkzXDyVlG+6SgIBAR\nj6ZsPgl8MEtR4VdPZpbdV4BbgLuR3pfPPEMNu9hxzJNvZBV3AfPbob2BwWqVoqXCMmErVDFHB/0l\ncHuWYwHMkdQJzIqIW4p4XjOrdhGB9De8Mc9QMxFdvX3k5LEsmn0pE1L3beuCiU/TuRO+Tua3EpYm\nZxCQNIfu8zaJxE39qoh4IFnmKhLv+tuyVHNKRKyVNI5EMFgYkT3JQ9LMlM25ETE3VzvNrMol5xm6\nCpbtgJWrpcWph/PJKh5ZB2fNY+ld7+QCteq1aIl/L22jy0NSE9BUlLoKnTtI0mXAp4B3R0R7HuVb\ngNcjMv9yPHeQWW27RPrNT+DU9P0XwWOzI5r2bp80XbMmj+0+EmhMAwdMHMPkV06l6eYt3ANcXQvz\nDJVt7iBJZwNfBt6ZLQBIGgHURcQ2SQ3AWUDOCaTMrDZ1Ql7TTfeyTOU/Azf/eifnL5jDb/U2fYld\nbOxWxlnFf1Zon8BNJIZozZEE8GRE/K2kCcAtEXEeiVdJ90iK5Pl+HBGPFHheM7NsrgGmPzeFq7SJ\nF7iAt/Yo4aziPyt0dND0LPvXAuclf14OXjPUzPpJcwRt+iTw6IyRjF1U7vZUOA/bNLOqMGTfs4o/\nsP9wxpWuRQODJ5Azs4qSLav4MDgcqZGILXlV1Bzrn/sXzQd6zFCwd9H6rP0KNcRBwMwqSpa1igXc\nCNyFdC4RHfnUtW03OzPtnzGRxsmbPccQOAiYWTVIJJN9AbgXuBnpUznXKoaM6xWv2QPPA2MaGFa6\nBlcPrzFsZtVDGgn8GriTiG/k85FM6xXftBn+YSW7dg1jRrTEylI0tT8Vct90x7CZVY/E5HLnAZ9G\nuriv1Xx2NByyitXAL9Wqg4rWvirk10FmVl0i1iCddy08uVT6h+3Qbfr6fKaXADhyMasWTuMhEoGg\nKVrilZK1uYI5CJhZ9Yl4doW0+Hv0TATLtWj9oHoGHzqO44YPpita4jq9Qx9iOEt1l56mizc6nGsk\nq9hBwMyq0lbIa32SLIvWvwX4FW06jR1s5zxGACd3K1MjWcXuEzCz2tMcC4BLgTsbBjO83M0pJwcB\nM6tNzfHfwMwjD+CocjelnBwEzKx2Ncd/bt5FfusaD1DuEzCzqpQ+vcQgGHwIHLevq8y/uIGlwKT0\n/cMaOKEWppZwEDCzqpRleokjgMeSC9b/Iq+KtrJozF0ce3RKVvGugPmNDNszOa2zeAByxrCZDSzS\nu0isVdxExPP5fCRTVvEfd8HJy+joGMwp0RJPlaKpxeKMYTOzvSIeA/4P8DOkA/tazduHwbELeRG4\nV62aWqTWVRwHATMbeCJ+BHwfuJ/EErd9MnU1G4DrgZ+pVaOL1LqK4j4BMxuovvpFaK6Dl16SFqQe\nyHdqiXpRHy3xLbXqMB7lOd2ppQTd36FXeWaxg4CZDUwRsUp65Q6YAd3f9+eaWgJg4himTx3HVNo0\nCPh7umjzNVA8AAALAUlEQVTmw7yzx3mqPLO4oCAg6avA+UAA64HLImJVhnJnAzeQeP10a0RcV8h5\nzczyEZDXyJcsU0sMAh4Aborp/K3uZCFwanFbWH6F9glcHxHHRMSxwH3AzPQCkuqAbwPvBd4CXKLE\nMC4zs8rVHHuAjwCnAF8g6Cxzi0qioCAQibm992og8TSQ7nhgcUS8FIkl4W4n8fRgZlbZmmMrifUL\nvjS+gbHlbk4pFDw6SNK1kl4GLgMyrfQzEUhduWdVcp+ZWVkMhqF5F26Ol4ELpo3h8NK1qHxy9glI\nmgOMT91F4j3bVRHxQERcDVwt6QoS7/0/UWijJM1M2ZwbEXMLrdPMak/61BIAB8DkaTADaRQRWzN+\nMF1zPPXyTK2bvIGJ23fzelcQ7cMYsmsYQ/fbyYTit7x3kpqApqLUVayMYUmTgZ9HxFFp+08EZkbE\n2cntK4HI1jnsjGEzKylJwM3AFOB9ROzJ52OZsoqvXA//+RJbt4xifLTErhK0Ni9lyxiWNC1l8wLg\n6QzFngKmSZoiaQhwMXB/Iec1M+uzxDffzyS3vp0MCn3y9bEwrJ124HtqVVUm3xba6G9KelbSPBKP\nJl8EkDRB0oMAEdFJ4n/4I8AC4PaIWFjgec3M+i7+PPLnJOBLfa2mTnDyPF4g8VRxTZFa168KyhOI\niA9l2b+WRI/63u2HYWB2qphZlYrYivS/gCeQlhNxV1+qGdRJF4kRj0+qVUujJW4rajtLzBnDZla7\nIladL/3haGhbJf3jdvhzR3G+U0sAREu8plady2PM03H6PO1p6x9X8NQSDgJmVtOGwthrYDDw1tT9\n+UwtsXc/QLTEizpOL3I+x/YoVMFTSzgImJnlIa8VxtrZ0g9NKaqq7M02M7PicBAwM6thDgJmZhk0\nwKhyt6E/uE/AzGpapqklRsH+hySmljiAiFfzrmwri7p1AtcxiDG8lWEMLkpjS8ALzZuZZSJdSyKZ\n7CwSSa99q6ZVhwC/BS6PlniwWM3rdg4vNG9mVnQtJCbL/GohlURLLAc+QGJqieOK0bBichAwM8sk\n8e3/EuBSpPcVVFVL/B74G+B+tWpyMZpXLA4CZmbZRLxGYo6h/0I6tKCqWuJuEtPt/0ytqphOZ/cJ\nmJnlIn2WxFopJxN9nzJarRIPs4B6DmQz84mUNZALmFqikPumg4CZWS6SvgyLO2HEKhLTROy1L3MM\nAehIPcaHeWePA7N5LBZEUx+b1+f7poeImpnlEhErpbW3w6nQfSWx9OGlueuior55u0/AzCwPXdDn\nYaKVzEHAzKyGOQiYmdUw9wmYmfWn9KklUveXQUFBQNJXSSyrFsB64LKIWJWh3ApgC9AFdETE8YWc\n18ysv6XPMVQH9YfCW0ft43200lYYK2iIqKSREbEt+fNngWMi4pMZyi0D3hYRm9KPZSjrIaJmVh0S\nCWS/Ay4h4lfla0aZ5g7aGwCSGkg8DWSiQs9lZlZxIpYBzcBPkA4pd3P6ouBkMSVm2vsYsAM4ISJ6\nLK+WfBLYTGKI1ayIuKWX+vwkYGbVJfEm5FMkMoq35Spe/NOXMGNY0hxgfOouEn0AV0XEAynlrgCO\niIhPZKhjQkSslTQOmAN8JiIez3I+BwEzqy6SgP8CRgMfJqKrn09f/mkjJE0Gfh4RR+Uo1wK8HhH/\nnuV4AK0pu+ZGxNyiNNLMrFSkoVfDS1tg5zp4KfXQvk4tkftUagKaUna1lGXaCEnTImJJcvMC4OkM\nZUYAdRGxTVIDcBbdb/I9RMTMQtplZtbvItqXS8t+nFiIZmrqoX2eWiLnqWIuMHfvdvLLdZ8Umifw\nTUkzSLzrXwZ8OtmgCcAtEXEeiVdJ9yS/4Q8CfhwRjxR4XjOzitMBu8vdhn1VUBCIiA9l2b8WOC/5\n83Lg2ELOY2ZmpeFhm2ZmNcxBwMyshnnuIDOzIkmfWkKgqXD0BBhbnhbl5pXFzMxKSRpNYmqJm4m4\nqTSn8MpiZmaVKWIz0rnA75BWkJJkWwncJ2BmVmoRK0jkUt2G9LYyt6YbBwEzs/4Q8QfgcuA+pIPL\n3Zy93CdgZtaPLpeeeBMctRzmdaasW1zI1BLuEzAzqxKboX1WYur9U1P3F3tqiXz5dZCZWQ1zEDAz\nq2EOAmZmNcxBwMyshrlj2MysH6VPLZG6v98bg4eImplVvULum34dZGZWwxwEzMxqmIOAmVkNcxAw\nM6thRQkCkr4oqUvS/lmOny3pBUmLJF1RjHOamVnhCg4CkiYBZwIvZTleB3wbeC/wFuASSUcUet5q\nJKmp3G0oJV9fdfP11aZiPAn8X+DLvRw/HlgcES9FRAdwO3B+Ec5bjZrK3YASayp3A0qsqdwNKLGm\ncjegxJrK3YBKVFAQkPR+YGVEzO+l2ERgZcr2quQ+MzMrs5wZw5LmAONTdwEBXA38I4lXQanHzMys\nSvQ5Y1jSkcCjwA4SN/9JwGrg+Ih4NaXcicDMiDg7uX0lEBFxXZZ6KyuF2cysCvQ1Y7ho00ZIWg4c\nFxGb0vbXAy8CZwBrgT8Al0TEwqKc2MzM+qyYeQJB8nWQpAmSHgSIiE7gM8AjwALgdgcAM7PKUHET\nyJmZWf8pS8awpFslrZP0bJbjzZKeSf55XNJR/d3GQuS6vpRy75DUIenC/mpbofK5NklNkuZJek7S\nr/qzfYXK4+/mWEkPSXpa0nxJl/VzEwsiaZKkX0pakGz/57KUu1HS4uR1Htvf7eyLfK6tmu8t+f7u\nkmXzv7dERL//IbHA8rHAs1mOnwg0Jn8+G3iyHO0s1fUly9QBvwAeBC4sd5uL+LtrJPHab2Jy+03l\nbnORr68F+MbeawM2AIPK3e59uL4DgWOTP48k0V93RFqZc4CfJX8+oVr+/eV5bVV7b8nn+pLH9une\nUpYngYh4HNjUy/EnI2JLcvNJqiyvINf1JX0WuAt4NUe5ipLHtTUDd0fE6mT59f3SsCLJ4/peAfZL\n/rwfsCEi9pS8YUUSEa9ExNPJn7cBC+n57+t84AfJMr8HGiWNp8Llc23VfG/J83cH+3hvqYYJ5D4J\nPFTuRhSTpIOACyLiZgZebsUMYH9Jv5L0lKRLy92gIrsFeIukNcAzwOfL3J4+kzSVxFPP79MOpSd4\nrqaKbpbQ67Wlqtp7S7br68u9paKXl5R0OvAJEo/oA8kNQOpEegMpEAwCjgPeDTQAT0h6IiKWlLdZ\nRfMV4JmIOF3SYcAcSUcnv5lVDUkjSXxb/Hy1tT2XfK6tmu8tOa5vn+8tFRsEJB0NzALOjrTcgwHg\n7cDtkkTivfI5kjoi4v4yt6sYVgHrI2IXsEvSr4FjgIESBE4BvgYQEUuT+TFHAH8sa6v2gaRBJG4i\nP4yI+zIUWQ1MTtnemwha8fK4tqq+t+Rxfft8bynn6yCRJUpJOhi4G7g0Ipb2a6uKJ+v1RcShyT+H\nkPiF/m2VBYCs1wbcB5wqqV7SCBIdi9WWF9Lb9S0E3gOQfE8+A1jWT+0qltuA5yPiW1mO3w98DP6c\n8b85Itb1V+MK1Ou1DYB7S6/X15d7S1meBCS1kZjRb6ykl0mMuBhCYjqJWcA/AfsD30lGtI6IOL4c\nbe2LPK4vVVUlauS6toh4QdJ/A88CncCsiHi+bA3eR3n87r4BfE/SMyQCxT9ExMZytXdfSToF+Cgw\nX9I8En///hGYwhu/w59LOlfSEmA7idcmFS+fa6OK7y15Xl+qvO4tThYzM6th1TA6yMzMSsRBwMys\nhjkImJnVMAcBM7Ma5iBgZlbDHATMzGqYg4CZWQ1zEDAzq2H/H1JXd3XbpqDsAAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x111492590>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Make a plot!\n",
+    "fig, ax = plt.subplots()\n",
+    "ax.plot(t1, y1, color='orange', marker='s')\n",
+    "ax.plot(t2, y2, color='green', marker='s')\n",
+    "ax.plot(t3, y3, color='red', marker='s')"
    ]
   },
   {
