--- a/teaching/310-F16/lab0-intro-lab/example-lab-report.tex
+++ b/teaching/310-F16/lab0-intro-lab/example-lab-report.tex
@@ -56,7 +56,7 @@ If your introduction (or any other section) is especially long then you can (opt
 
 This section should tell a story of what you did and what you found, including your experimental setup and all the equipment you used.  You should write this in narrative form, not as a list.  You may include a figure or two if appropriate (see \S~\ref{sec:analysis} for how to include a figure in your document), and there should be enough detail for another scientist (or student) to reproduce your experiment or experiments.
 
-\section{Data (or Observations)}
+\section{Data}
 
 % Note the \ref{} and \label{} macros allow you to refer to tables, figures, sections, etc. in the correct order even if you move them around.
 This section should tabulate your measurements (data) or observations. Creating a table (see Table~\ref{tab:data}) is pretty straightforward.  You just need to specify how many columns you want and then put in the data! Note: (1) tables should have a clear and descriptive title; (2) columns should be labeled with the units noted at the top of each column; and (3) each table should be referenced in the text.
@@ -79,7 +79,7 @@ Mars    & 0.6417 & 3389.5 \\
 \end{table}
 
 % Note how I'm labeling this section so I can allude to it above.
-\section{Analysis or Results}\label{sec:analysis}
+\section{Analysis}\label{sec:analysis}
 
 This section should contain a description of your analysis and results, including visualizations (figures) of your data and any derived quantities. You should also state any simplifying assumptions that you had to make.  
 
