added more info about courses

--- a/advising/faq_clarkson41.tex
+++ b/advising/faq_clarkson41.tex
@@ -46,8 +46,8 @@ on obtaining their engineering masters degree in just one additional year
 (hence, the ``4/1 Program'').  You may take up to \underline{three} courses at
 Clarkson as part of your Siena tuition (i.e., without paying any additional
 fees).  In addition, the courses you take at Clarkson may also satisfy your
-upper-level major course requirements, although that depends on your
-department---see your advisor for details.}
+upper-level major course requirements, although that depends on the course and
+your department---see your advisor for details.}
 
 %In the physics department these courses also count toward your
 %required upper-level physics courses (as PHYS400).  See your advisor for
@@ -61,7 +61,7 @@ The three Master of Science (M.S.) programs currently available to students are
 MSEE program ``explores technologies and industry opportunities in modern
 electric machinery, modeling and control of power electronics.''  The MSEM
 program integrates ``engineering and/or information systems technologies with
-the core components of an MBA, including Business of Energy Program courses''
+the core components of an MBA, including Business of Energy Program courses.''
 And the MSE degree enables ``students to integrate (1) mechanical/electrical
 energy related courses, (2) mechanical and electrical fundamental discipline
 courses, and (3) non-technical courses regarding the impact of environmental,
@@ -69,13 +69,17 @@ economic, and regulatory issues on energy.''}
 
 \item{{\bf {\em When can I start taking classes at Clarkson?}}
 
-Students can start taking classes as soon as they have sufficient mathematics
-preparation, typically in their junior or senior year.  Although these are not
-formal prerequisites, it is strongly recommended that students have completed
-all three semesters of calculus, differential equations, and either linear
-algebra or applied mathematics (ideally, both) before tackling these
-graduate-level courses.  You should also have some experience with {\tt
-  Matlab}/{\tt Simulink}.}
+Students can start taking classes as soon as they have room in their schedule
+and have sufficient mathematics preparation, typically in their junior or senior
+year.  Although these are not formal prerequisites, for the more technical
+electrical engineering courses (e.g., {\em Linear Control Systems}) it is
+strongly recommended that students have completed all three semesters of
+calculus, differential equations, and either linear algebra or applied
+mathematics (ideally, both), as well as some experience with {\tt Matlab}/{\tt
+  Simulink}.  Some of the business-oriented courses (e.g., {\em Fundamentals of
+  the Business of Energy}) may be taken without having completed as much math,
+although they are still graduate-level courses and require a significant amount
+of work.}
 
 \item{{\bf {\em When are the academic terms at Clarkson?}}
 
@@ -92,10 +96,13 @@ evening.  The average class size is around 12 students.}
 \item{{\bf {\em What classes are offered?  What are the prerequisites?}}
 
 The courses available varies somewhat from year-to-year, so you should speak
-with your advisor about which courses are available and whether you are ready to
-start taking courses at Clarkson.  However, the \emph{first} course Siena
-students typically take regardless of which program they are pursuing is {\em
-  EER 522: Linear Control Systems}.}
+with your advisor and Dean Kozik about which courses are available and whether
+you are ready to start taking courses at Clarkson.  Some of the courses our
+students have taken (and when they are typically offered) include {\em Linear
+  Control Systems} (fall), {\em Fundamentals of Business of Energy} (online,
+offered frequently), {\em Solar Energy Engineering} (winter), {\em Fuel Cell \&
+  Hydrogen Engineering} (varies), {\em Wind Energy Engineering} (project-based,
+spring), and {\em Electromechanical Energy Conversion}.}
 
 \item{{\bf {\em How do I apply to the program?  How do I register for classes?
       What are the minimum requirements?}}
