working on todo

--- a/research/massivepilot/massivepilot.ipynb
+++ b/research/massivepilot/massivepilot.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ToDo"
+    "# ToDo\n",
+    "\n",
+    "- Create environment variable for data.\n",
+    "- I have already created the trimmed file, but I need to re-create the code in this notebook."
    ]
   },
   {
