cleaning up galactic plane

--- a/research/desitarget/dr3_targets_skymaps.ipynb
+++ b/research/desitarget/dr3_targets_skymaps.ipynb
@@ -101,69 +101,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on function init_sky in module desiutil.plots:\n",
-      "\n",
-      "init_sky(projection='eck4', ra_center=120, galactic_plane_color='red', ra_labels=array([-60, -30,   0,  30,  60]), dec_labels=array([  0,  60, 120, 180, 240, 300]), ax=None)\n",
-      "    Initialize a basemap projection of the full sky.\n",
-      "    \n",
-      "    The returned Basemap object is augmented with an ``ellipse()`` method to\n",
-      "    support drawing ellipses or circles on the sky, which is useful for\n",
-      "    representing DESI tiles.\n",
-      "    \n",
-      "    Note that the projection uses the geographic convention that RA increases\n",
-      "    from left to right rather than the opposite celestial convention because\n",
-      "    otherwise RA labels are drawn incorrectly (see\n",
-      "    https://github.com/matplotlib/basemap/issues/283 for details).\n",
-      "    \n",
-      "    The DESI footprint would look better with a projection centered at DEC ~ 15,\n",
-      "    which should be possible with basemap but is not current working (see\n",
-      "    https://github.com/matplotlib/basemap/issues/192).\n",
-      "    \n",
-      "    Requires that matplotlib and basemap are installed.\n",
-      "    \n",
-      "    Parameters\n",
-      "    ----------\n",
-      "    projection : :class: `string`, optional\n",
-      "        All-sky projection used for coordinate transformations. The default\n",
-      "        'eck4' is recommended for the reasons given `here\n",
-      "        <http://usersguidetotheuniverse.com/index.php/2011/03/03/\n",
-      "        whats-the-best-map-projection/>`__.  Other good choices are\n",
-      "        kav7' and 'moll'.\n",
-      "    ra_center : float\n",
-      "        Map is centered at this RA in degrees. Default is +120, which\n",
-      "        avoids splitting the DESI northern and southern regions.\n",
-      "    galactic_plane_color : color name or None\n",
-      "        Draw a line representing the galactic plane using the specified\n",
-      "        color, or do nothing when None.\n",
-      "    ra_labels : iterable or None\n",
-      "        List of RA values in degrees that will be labeled on the map.\n",
-      "        If None, there will be no RA labels or grid lines.\n",
-      "    dec_labels : iterable or None\n",
-      "        List of DEC values in degrees that will be labeled on the map.\n",
-      "        If None, there will be no DEC labels or grid lines.\n",
-      "    ax : matplotlib axis objet or None\n",
-      "        Axes to use for drawing this map, or use current axes if None.\n",
-      "    \n",
-      "    Returns\n",
-      "    -------\n",
-      "    :class:`mpl_toolkits.basemap.Basemap`\n",
-      "       The Basemap object created for this plot, which can be used for\n",
-      "       additional projection and plotting operations.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "help(init_sky)"
+    "#help(init_sky)"
    ]
   },
   {
