--- a/research/desitarget/dr3_targets_skymaps.ipynb
+++ b/research/desitarget/dr3_targets_skymaps.ipynb
@@ -132,9 +132,10 @@
     "with warnings.catch_warnings():\n",
     "    warnings.simplefilter('ignore')\n",
     "    plt.figure(figsize=(8, 12))\n",
-    "    for number, obj in enumerate(['LRG', 'QSO', 'ELG']):\n",
+    "    targets = ['LRG', 'QSO', 'ELG']\n",
+    "    for number, obj in enumerate(targets):\n",
     "        cut = np.where((dd['DESI_TARGET'] & desi_mask.mask(obj)) != 0)*1\n",
-    "        plt.subplot(3, 1, number+1)\n",
+    "        plt.subplot(len(targets), 1, number+1)\n",
     "        basemap = init_sky(galactic_plane_color='k');\n",
     "        plot_sky_binned(dd['RA'][cut], dd['DEC'][cut], verbose=False, clip_lo='!1', plot_type='healpix', \n",
     "                        cmap='jet', label=r'{}s (targets/deg$^2$)'.format(obj), basemap=basemap);\n",
