working on file trimming

--- a/research/massivepilot/massivepilot.ipynb
+++ b/research/massivepilot/massivepilot.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -76,59 +76,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "path = '/home/kjnapes/'\n",
-    "file = ''"
+    "path = '/Users/kevinnapier/research/dmhalos/'\n",
+    "file = 'tractor-redmapper_isedfit_v5.10_centrals.fits'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "407118\n"
+     ]
+    }
+   ],
    "source": [
-    "data = fits.getdata(os.join(path, file))\n",
-    "print('hello')"
+    "data = fits.getdata(os.path.join(path, file))\n",
+    "print(len(data))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/anaconda/lib/python3.6/site-packages/ipykernel/__main__.py:2: FutureWarning: elementwise == comparison failed and returning scalar instead; this will raise an error or perform elementwise comparison in the future.\n",
+      "  from ipykernel import kernelapp as app\n"
+     ]
+    }
+   ],
    "source": [
     "if CUTS == True:\n",
     "    keep = np.where(data == -1)\n",
     "    newdata = np.delete(data, keep)\n",
-    "    newdata.writeto('newdata.fits')"
+    "    fits.writeto(os.path.join(path,'tractor_matched_centrals.fits'), newdata)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -148,7 +147,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.2"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
