--- a/research/massivepilot/massivepilot.ipynb
+++ b/research/massivepilot/massivepilot.ipynb
@@ -258,13 +258,243 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## Compare PyMorph and iSEDfit stellar masses"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Populating the interactive namespace from numpy and matplotlib\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from astropy.io.ascii import read\n",
+    "import fitsio\n",
+    "\n",
+    "%pylab inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "pypath = os.path.join(os.sep, 'global', 'work', 'projects', 'legacysurvey', 'legacycentrals')\n",
+    "meertcat = os.path.join(pypath, 'meert_et_al_data_tables_v2')\n",
+    "mendelcat = os.path.join(pypath, 'UPenn_PhotDec_Mstar_mlMendel14.dat')\n",
+    "wisccat = os.path.join(pypath, 'UPenn_PhotDec_Mstar_mlPCAWiscM11.dat')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "rmpath = os.path.join(os.sep, 'global', 'work', 'projects', 'redmapper')\n",
+    "rmcatfile = os.path.join(rmpath, 'redmapper_isedfit_v5.10_centrals.fits.gz')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('GalCount',\n",
+       " 'FlagSerExp',\n",
+       " 'Mstar_Tab5_Pymorph',\n",
+       " 'Mstar_Tab5_Truncated',\n",
+       " 'Mstar_Tab3_Pymorph',\n",
+       " 'Mstar_Tab3_Truncated',\n",
+       " 'Mstar_Tab5_Mendel',\n",
+       " 'Mstar_Tab3_Mendel',\n",
+       " 'Mstar_Tab5_cModel',\n",
+       " 'Mstar_Tab3_cModel')"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Read the Mendel catalog\n",
+    "columns = ('GalCount', 'FlagSerExp', 'Mstar_Tab5_Pymorph',\n",
+    "           'Mstar_Tab5_Truncated', 'Mstar_Tab3_Pymorph',\n",
+    "           'Mstar_Tab3_Truncated', 'Mstar_Tab5_Mendel',\n",
+    "           'Mstar_Tab3_Mendel', 'Mstar_Tab5_cModel',\n",
+    "           'Mstar_Tab3_cModel')\n",
+    "dtype = np.dtype([(col, np.float) for col in columns])\n",
+    "allmendel = np.loadtxt(mendelcat, dtype=dtype)\n",
+    "allmendel.dtype.names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Keeping 628919 / 670722 measurements in the Mendel catalog.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Keep good measurements.\n",
+    "keep = np.where(allmendel['FlagSerExp'] == 0)[0]\n",
+    "print('Keeping {} / {} measurements in the Mendel catalog.'.format(len(keep), len(allmendel)))\n",
+    "mendel = allmendel[keep]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "628919"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Read the parent Meert catalog to get ra, dec and other info.\n",
+    "upennpath = os.path.join(pypath, 'meert_et_al_data_tables_v2')\n",
+    "upenncatfile = os.path.join(upennpath, 'UPenn_PhotDec_CAST.fits')\n",
+    "upenncat = fitsio.read(upenncatfile, ext=1, rows=keep)\n",
+    "upenncat.dtype.names\n",
+    "len(upenncat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "628919"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(mendel)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.all((upenncat['galcount'], mendel['GalCount']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "rminfo = fitsio.FITS(rmcatfile)\n",
+    "rmcat = rminfo[1].read(columns=['Z', 'RA', 'DEC', 'LAMBDA_CHISQ', 'MSTAR_50', 'MSTAR_ERR'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(628919, 670722)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Match to remapper, make plots.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "fig, ax = plt.subplots()\n",
+    "ax.scatter(rmcat['MSTAR_50'], mendel['Mstar_Tab5_Pymorph'])"
+   ]
   }
  ],
  "metadata": {
